[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/turret.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/TurretProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 354.148

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.194
height = 33.4274

[node name="Turret" type="StaticBody2D"]
collision_mask = 4
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FireTimer" type="Timer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="BodyCollitionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.197891, 0.197906 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -0.533031, 31.647 )
enabled = true
collision_mask = 3
collide_with_areas = true

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( -0.296131, 31.3831 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
